--- a/templates/languages/index.html.twig
+++ b/templates/languages/index.html.twig
@@ -47,6 +47,7 @@
 					<tr>
 						<th>Nom</th>
 						<th>Flag</th>
+						<th>Slug</th>
 						<th>actions</th>
 					</tr>
 				</thead>
@@ -57,6 +58,7 @@
 							<td>
 								<img src="{{ asset('images/languages/'~ language.flag ) | imagine_filter('miniatures') }}" alt="Drapeau associé à la langue {{ language.name }}">
 							</td>
+							<td>{{ (language.slug)?? language.slug }}</td>
 							<td>
 								<a href="{{ path('languages_edit', {'id': language.id}) }}" class="btn btn-warning">Editer</a>
 								{{ include('languages/_delete_form.html.twig') }}
