--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,5 +4,12 @@
 
 {% block body %}
 
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success" role="alert">{{ message }}</div>
+		{% endfor %}
 
+		{% for message in app.flashes('fail') %}
+			<div class="alert alert-warning" role="alert">{{ message }}</div>
+		{% endfor %}
+        
 {% endblock %}
