--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,46 +6,96 @@
         <title>{% block title %}Ludo et Sophie Accueil{% endblock %}</title>
 
         {# Chargement CDNs #}
+        <link rel="stylesheet" href="{{ asset('css/normalize.css') }}">
         <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
 
         <header>
-            <div class="row">
-                <div class="col-2">
-                    <a href="" title="Inscrivez-vous à la Newsletter de Ludo et Sophie"><img src="{{ asset('images/icones/picto_newsletter.jpg') | imagine_filter('miniatures') }}" alt="Logo d'inscription à la Newsletter de Ludo et Sophie"></a>
-                    <p>Newsletter</p>
-                </div>
-                <div class="col-8">
-                    <a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil" ><img src="{{ asset('images/icones/logo_neutrenew.jpg') }}" alt="Image d'acceuil du site Ludo et Sophie"></a>
-                </div>
-                <div class="col-2">
-                    <ul>
+            <div class="container">
+                <div class="row">
+                    <div class="col-2">
+                        <a href="" title="Inscrivez-vous à la Newsletter de Ludo et Sophie"><img src="{{ asset('images/icones/picto_newsletter.jpg') | imagine_filter('miniatures') }}" alt="Logo d'inscription à la Newsletter de Ludo et Sophie"></a>
+                        <p>Newsletter</p>
+                    </div>
+                    <div class="col-8">
+                        <a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil" ><img src="{{ asset('images/icones/logo_neutrenew.jpg') }}" alt="Image d'acceuil du site Ludo et Sophie"></a>
+                    </div>
+                    <div class="col-2">
                         {% for foreignLanguage in foreignLanguages() %} 
-                            <li>
-                                <a href="{{ path('foreign', { slug: foreignLanguage.slug}) }}"><img src="{{ asset('images/languages/' ~ foreignLanguage.flag ) | imagine_filter('miniatures') }}" alt="Icone de la langue {{ foreignLanguage.name }}"></a>
-                            
-                            </li>
-                        {% endfor %}
-                    </ul>
-                    <p>English and Spanish family tours</p>
-                </div>
-            </div>
+                            <a href="{{ path('foreign', { slug: foreignLanguage.slug}) }}"><img src="{{ asset('images/languages/' ~ foreignLanguage.flag ) | imagine_filter('miniatures') }}" alt="Icone de la langue {{ foreignLanguage.name }}"></a>
 
-            <nav>
-                <ul>
-                    <li><a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil" >Acceuil</a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                    <li><a href=""></a></li>
-                </ul>
-            </nav>
+                        {% endfor %}
+                        <p>English and Spanish family tours</p>
+                    </div>
+                </div>
+
+                <nav>
+                    <a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil" >Acceuil</a>
+                    <a href="">Agenda familles</a>
+                    <a href="">Groupes privées</a>
+                    <a href="">Scolaires</a>
+                    <a href="">Mais encore...</a>
+                </nav>
+
+            </div>
         </header>
-        {% block body %}{% endblock %}
+
+        <main>
+            {% block body %}{% endblock %}        
+        </main>
+
+        <footer class="border-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-3">
+                        <h4 class="contact_us">Une question ? Une idée ?</h4>
+                        <div class="row">
+                            <div class="col-4 m-0">
+                                <img class="w-100 m-0" src="{{ asset('images/icones/logo_footer.jpg') }}" alt="Logo footer Ludo et Sophie">                            
+                            </div>
+                            <address class="col-8 text-left m-0">
+                                Ludo &amp; Sophie SAS
+                                49 rue de Ponthieu
+                                75008 Paris               
+                            </address>             
+                        </div>
+                    </div>
+                    <div class="col-md-9">
+                        <form class="row" method="post" action="{{ path('send_email') }}" >
+                            <div class="col-md-4">
+                                <input type="hidden" name="nosiar">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="name" placeholder="Nom" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" name="email" placeholder="Email" required>
+                                </div>
+                                <div class="form-group">
+                                    <input type="tel" class="form-control" name="phone" placeholder="Téléphone" required>
+                                </div>                        
+                            </div>
+                            <div class="col-md-8">
+                                <div class="form-group">
+                                    <input type="text" class="form-control" name="subject" placeholder="Objet de votre message" required>
+                                </div>
+                                <div class="form-group">
+                                    <textarea class="form-control" name="message" placeholder="Écrivez votre message ici" required></textarea>
+                                </div>
+                                <button type="submit" class="btn btn-light">Envoyer</button>              
+                            </div>
+                        </form>  
+                    </div>
+                </div>
+            
+            </div>
+        
+        </footer>
+
 
         <!-- JS, Popper.js-->
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -54,3 +104,6 @@
         {% block javascripts %}{% endblock %}
     </body>
 </html>
+
+
+
