--- a/templates/home/people.html.twig
+++ b/templates/home/people.html.twig
@@ -5,14 +5,6 @@
 
 {% block body %}
 
-		{% for message in app.flashes('success') %}
-			<div class="alert alert-success" role="alert">{{ message }}</div>
-		{% endfor %}
-
-		{% for message in app.flashes('fail') %}
-			<div class="alert alert-warning" role="alert">{{ message }}</div>
-		{% endfor %}
-
         <h1>Qui sommes-nous ?</h1>
 
         <section class="row">
@@ -21,10 +13,10 @@
                     <article class="col-6">
                         <div class="row">
                             <div class="col-4">
-                                {% if person.picture is defined %}
-                                    <img src="{{ asset('images/people/'~ person.picture ) | imagine_filter('miniatures') }}" alt="Photo de : '{{ person.name }}'">
+                                {% if person.picture is not empty %}
+                                    <img src="{{ asset('images/people/'~ person.picture ) | imagine_filter('miniatures') }}" alt="Photo de {{ person.name }}">
                                 {% else %}
-                                    <img src="{{ asset('images/people/noone.jpg' ) | imagine_filter('miniatures') }}" alt="Photo de : '{{ person.name }}'">
+                                    <img src="{{ asset('images/people/noone.jpg' ) | imagine_filter('miniatures') }}" alt="Photo de {{ person.name }}">
                                 {% endif %}
                             </div>
                             <div class="col-8">
@@ -53,10 +45,10 @@
             {% for person in people %}
                 {% if person.isHead == false %}
                     <article class="col-3">
-                        {% if person.picture is defined %}
-                            <img src="{{ asset('images/people/'~ person.picture ) | imagine_filter('miniatures') }}" alt="Photo de : '{{ person.name }}'">
+                        {% if person.picture is not empty %}
+                            <img src="{{ asset('images/people/'~ person.picture ) | imagine_filter('miniatures') }}" alt="Photo de {{ person.name }}">
                         {% else %}
-                            <img src="{{ asset('images/people/noone.jpg' ) | imagine_filter('miniatures') }}" alt="Photo de : '{{ person.name }}'">
+                            <img src="{{ asset('images/people/noone.jpg' ) | imagine_filter('miniatures') }}" alt="Photo de {{ person.name }}">
                         {% endif %}
                         <h2>{{ person.name }}</h2>
                         <p>{{ person.function }}</p>
@@ -64,6 +56,8 @@
                     </article>                    
                 {% endif %}
             {% endfor %}
+
+            <a href="{{ path('home_younglings') }}">Sans oublier tous nos petits éclaireurs que vous pouvez découvrir sur leur page à eux.</a>
         </section>
 
 		
