--- a/templates/frequently_asked_questions/edit.html.twig
+++ b/templates/frequently_asked_questions/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('frequently_asked_questions/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('frequently_asked_questions_index') }}">back to list</a>
+    <a href="{{ path('frequently_asked_questions_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     {{ include('frequently_asked_questions/_delete_form.html.twig') }}
 {% endblock %}
