--- a/templates/frequently_asked_questions/new.html.twig
+++ b/templates/frequently_asked_questions/new.html.twig
@@ -34,7 +34,7 @@
 
 			{{ include('frequently_asked_questions/_form.html.twig') }}
 
-			<a href="{{ path('frequently_asked_questions_index') }}">back to list</a>
+			<a href="{{ path('frequently_asked_questions_index') }}" class="btn btn-primary">Retour à la liste</a>
 		</div>
 	</div>
 {% endblock %}
