--- a/templates/frequently_asked_questions/show.html.twig
+++ b/templates/frequently_asked_questions/show.html.twig
@@ -22,7 +22,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('frequently_asked_questions_index') }}">back to list</a>
+    <a href="{{ path('frequently_asked_questions_index') }}" class="btn btn-primary">Retour à la liste</a>
 
     <a href="{{ path('frequently_asked_questions_edit', {'id': frequently_asked_question.id}) }}">edit</a>
 
