--- a/templates/people/edit.html.twig
+++ b/templates/people/edit.html.twig
@@ -32,7 +32,7 @@
 		<div class="container-fluid">
 
 			{{ include('people/_form.html.twig', {'button_label': 'Modifier'}) }}
-			<a class="d-block" href="{{ path('people_index') }}" class="btn btn-primary" >Retour à la liste</a>
+			<a href="{{ path('people_index') }}" class="btn btn-primary" >Retour à la liste</a>
 
 			{{ include('people/_delete_form.html.twig') }}
 		</div>
