--- a/templates/people/index.html.twig
+++ b/templates/people/index.html.twig
@@ -46,10 +46,16 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Nom</th>
+                        <th>
+							{{ knp_pagination_sortable(people, 'Nom', 'name') }}
+						</th>
                         <th>Photo</th>
-                        <th>Fonction</th>
-                        <th>Fait parti de la direction</th>
+                        <th>
+							{{ knp_pagination_sortable(people, 'Fonction', 'function') }}
+						</th>
+                        <th>
+							{{ knp_pagination_sortable(people, 'Fait parti de la direction ?', 'isHead') }}						
+						</th>
                         <th>Actions</th>
                     </tr>
                 </thead>
@@ -78,7 +84,13 @@
                     </tr>
                 {% endfor %}
                 </tbody>
-            </table>
+				<div>
+					{{ knp_pagination_render(people) }}
+				</div>
+			</table>
+			<div>
+				{{ knp_pagination_render(people) }}
+			</div>
 
 	        <a href="{{ path('people_new') }}" class="btn btn-success my-5" >Créer nouveau collaborateur</a>
         </div>
