--- a/templates/younglings/index.html.twig
+++ b/templates/younglings/index.html.twig
@@ -46,7 +46,9 @@
             <table class="table">
                 <thead>
                     <tr>
-                        <th>Nom</th>
+                        <th>
+							{{ knp_pagination_sortable(younglings, 'Nom', 'name') }}
+						</th>
                         <th>Photo</th>
                         <th>Actions</th>
                     </tr>
@@ -73,7 +75,13 @@
                     </tr>
                 {% endfor %}
                 </tbody>
-            </table>
+				<div>
+					{{ knp_pagination_render(younglings) }}
+				</div>
+			</table>
+			<div>
+				{{ knp_pagination_render(younglings) }}
+			</div>
 
 	        <a href="{{ path('younglings_new') }}" class="btn btn-success my-5" >Créer une nouvelle fiche éclaireur</a>
         </div>
