--- a/templates/frequently_asked_questions/index.html.twig
+++ b/templates/frequently_asked_questions/index.html.twig
@@ -40,6 +40,8 @@
 				<div class="alert alert-warning" role="alert">{{ message }}</div>
 			{% endfor %}
 
+			<a href="{{ path('frequently_asked_questions_new') }}" class="btn btn-success my-5">Créer nouvelle question-réponse</a>
+
 			<table class="table">
 				<thead>
 					<tr>
@@ -58,7 +60,7 @@
 							<td>{{ frequently_asked_question.question }}</td>
 							<td>{{ frequently_asked_question.answer }}</td>
 							<td>
-								<a href="{{ path('frequently_asked_questions_edit', {'id': frequently_asked_question.id}) }}">edit</a>
+								<a href="{{ path('frequently_asked_questions_edit', {'id': frequently_asked_question.id}) }}" class="btn btn-warning" >Modifier</a>
                                 {{ include('frequently_asked_questions/_delete_form.html.twig') }}
 							</td>
 						</tr>
@@ -76,7 +78,7 @@
 				{{ knp_pagination_render(frequently_asked_questions) }}
 			</div>
 
-			<a href="{{ path('frequently_asked_questions_new') }}" class="btn btn-success">Créer nouvelle question-réponse</a>
+			<a href="{{ path('frequently_asked_questions_new') }}" class="btn btn-success my-5">Créer nouvelle question-réponse</a>
 
 		</div>
 	</div>
