prérequis vitrine catégories; html vitrine pages publication ok

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -59,7 +59,7 @@
                     <div class="navbar-header"></div>
                     <div class="">
                         <ul class="nav navbar-nav">
-                            <li><a class="mobile_fix">Accueil</a></li>
+                            <li><a href="" class="mobile_fix">Accueil</a></li>
                             <li><a class="mobile_fix">Agenda familles</a></li>
                             <li><a class="mobile_fix">Groupes privés</a></li>
                             <li><a class="mobile_fix">Scolaires</a></li>
@@ -67,7 +67,7 @@
                             <li id="***REMOVED***" class="dropdown hidden-lg">
                                 <a id="***REMOVED***_link" href="#" title="Programmation" class="dropdown-toggle" data-toggle="dropdown"><span class="first_lvl">Mais encore...</span> <span class="caret"></span></a>
                                 <ul class="dropdown-menu dropdown-menu-right">
-                                    <li><a class="mobile_fix" >Club Enfants</a></li>
+                                    <li><a class="mobile_fix">Club Enfants</a></li>
                                     <li><a class="mobile_fix">Club Soda</a></li>
                                     <li><a class="mobile_fix">City Break</a></li>
                                     <li><a class="mobile_fix">Pour les adultes</a></li>
@@ -137,13 +137,13 @@
                     </div>
                 </div>
 
-                {# <ul>
+                <ul>
                     <li><a href="{{ path('home_people') }}" title="Qui sommes-nous?">Qui sommes-nous?</a></li>
-                    <li><a href="{{ path('home_post', {slug:'nous-rejoindre'}) }}" title="">Nous rejoindre</a></li>
-                    <li><a href="{{ path('home_post', {slug:'conditions-generales'}) }}" title="">*Conditions Générales de Services</a></li>
-                    <li><a href="{{ path('home_post', {slug:'ludo-et-sophie-nos-partenaires'}) }}" title="">Merci à...</a></li>
-                    <li><a href="{{ path('home_faq') }}" title="Aller à la Foire aux Questions">F.A.Q.</a></li>
-                </ul> #}
+                    <li><a href="{{ path('home_post', {slug:'nous-rejoindre'}) }}" title="Nous rejoindre">Nous rejoindre</a></li>
+                    <li><a href="{{ path('home_post', {slug:'conditions-generales'}) }}" title="Conditions Générales de Services">Conditions Générales de Services</a></li>
+                    <li><a href="{{ path('home_post', {slug:'nos-partenaires'}) }}" title="Nos partenaires">Merci à...</a></li>
+                    <li><a href="{{ path('home_faq') }}" title="Foire aux Questions">F.A.Q.</a></li>
+                </ul>
 
                 <ul>
                     <li><a href="">Toutes nos ***REMOVED***</a></li>
