--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -86,6 +86,10 @@
 						</td>
 					</tr>
 					<tr>
+						<th>SEO URL</th>
+						<td>{{ category.slug }}</td>
+					</tr>
+					<tr>
 						<th>Créée le</th>
 						<td>{{ category.createdAt|date('d-m-Y H:i:s') }}</td>
 					</tr>
