--- a/templates/pages/index.html.twig
+++ b/templates/pages/index.html.twig
@@ -78,7 +78,7 @@
 							{{ knp_pagination_sortable(pages, 'Auteur', 'user.lastname') }}
 						</th>
 						<th>
-							{{ knp_pagination_sortable(pages, 'Slug', 'slug') }}
+							{{ knp_pagination_sortable(pages, 'SEO URL', 'slug') }}
 						</th>
 						<th>actions</th>
 					</tr>
