--- a/templates/pages/show.html.twig
+++ b/templates/pages/show.html.twig
@@ -71,7 +71,7 @@
 						<td>{{ page.updatedAt ? page.updatedAt|date('d-m-Y H:i:s') : '' }}</td>
 					</tr>
 					<tr>
-						<th>Slug</th>
+						<th>SEO URL</th>
 						<td>{{ page.slug }}</td>
 					</tr>
 					<tr>
