--- a/templates/categories/_form.html.twig
+++ b/templates/categories/_form.html.twig
@@ -6,7 +6,7 @@
 {{ form_row(form.meta_tag_description) }}
 {{ form_row(form.keywords) }}
 {{ form_row(form.meta_tag_keywords) }}
-{# {{ form_row(form.images) }}  #}
+{{ form_row(form.slug) }} 
 
 <fieldset class="form-group">
     <legend class="col-form-label">{{ form.images.vars.label }}</legend>
