--- a/templates/categories/index.html.twig
+++ b/templates/categories/index.html.twig
@@ -71,6 +71,9 @@
 						<th>
 							{{ knp_pagination_sortable(categories, 'Nombre de produits associés', 'products.count' ) }}
 						</th>
+						<th>
+							{{ knp_pagination_sortable(categories, 'SEO URL', 'slug') }}
+						</th>
 						<th>actions</th>
 					</tr>
 				</thead>
@@ -89,6 +92,9 @@
 								<a href="{{ path('categories_show', {'id': category.id}) }}" class="btn btn-primary" >Voir</a>
 								<a href="{{ path('categories_edit', {'id': category.id}) }}" class="btn btn-warning" >Modifier</a>
 								{{ include('categories/_delete_form.html.twig') }}
+							</td>
+							<td>
+								{{ category.slug }}
 							</td>
 						</tr>
 					{% else %}
