--- a/templates/home/page.html.twig
+++ b/templates/home/page.html.twig
@@ -1,14 +1,8 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Ludo et Sophie - {{ page.title }}
+{% block title %}Ludo et Sophie - {{ page.title ?? '' }}
 {% endblock %}
 
 {% block body %}
-
-        <h1>{{ page.title }}</h1>
-
-        <section>
-            {{ page.content|raw }}
-        </section>
-        
+{{ ( page.content ?? '')|raw }}
 {% endblock %}
