--- a/templates/categories/show.html.twig
+++ b/templates/categories/show.html.twig
@@ -41,7 +41,7 @@
 					</tr>
 					<tr>
 						<th>Description</th>
-						<td>{{ category.description }}</td>
+						<td>{{ category.description|raw }}</td>
 					</tr>
 					<tr>
 						<th>Mots-clés</th>
