--- a/templates/home/page.html.twig
+++ b/templates/home/page.html.twig
@@ -4,5 +4,11 @@
 {% endblock %}
 
 {% block body %}
-{{ ( page.content ?? '')|raw }}
+    <article>
+        <h2>{{ page.title ?? '' }}</h2>
+        <div>
+            {{ ( page.content ?? '')|raw }}
+        </div>
+    </article>
 {% endblock %}
+
