--- a/templates/home/products.html.twig
+++ b/templates/home/products.html.twig
@@ -6,6 +6,7 @@
 
 {% block body %}
 
+
 	<ul>
 		<li>
 			<a href="{{ path('home') }}" title="Ludo et Sophie : Acceuil">
@@ -23,70 +24,74 @@
 		<h2>{{ product.title ?? '' }}</h2>
 		<div class="d-flex">
 			<div class="w-50">
-                {% for image in product.images %}
-                    {% set id = loop.index - 1 %}
-                    <!-- Button trigger modal -->
-                    <a data-toggle="modal" data-target="#carouselModal{{ id }}">
-                        <div class="{{ (id != 0)?'d-inline-block':'' }} border rounded-lg p-2 mr-1 my-3">
-                            <img class="{{ (id == 0)?'w-100':'' }}" src="{{ asset('images/products/' ~ image.name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">
-                        </div>
-                    </a>
-                    {{ include('home/_modalCarousel.html.twig') }}
-                {% endfor %}
-                <div class="my-3">
-                    <p>Référence sortie:
-                        {{ product.reference }}</p>
-                </div>
+				{% for image in product.images %}
+					{% set id = loop.index - 1 %}
+					<!-- Button trigger modal -->
+					<a data-toggle="modal" data-target="#carouselModal{{ id }}">
+						{% if id == 0 %}
+							<div class="border rounded-lg p-2 mr-1 my-3">
+								<img class="w-100" src="{{ asset('images/products/' ~ image.name ) }}" alt="Immage d'illustration {{ product.title ?? '' }}">
+							</div>
+						{% else %}
+							<div class="d-inline-block border rounded-lg p-2 mr-1 my-3">
+								<img src="{{ asset('images/products/' ~ image.name )| imagine_filter('miniatures') }}" alt="Immage d'illustration {{ product.title ?? '' }}">
+							</div>
+						{% endif %}
+					</a>
+					{{ include('home/_modalCarousel.html.twig') }}
+				{% endfor %}
+				<div class="my-3">
+					<p>Référence sortie:
+						{{ product.reference }}</p>
+				</div>
 			</div>
 
 			<div class="w-50 p-3 m-3">
 
-				<p>
-					<a data-toggle="collapse" href="#collapseDescription" role="button" aria-expanded="false" aria-controls="collapseDescription">
-						Description
-					</a>
-					<a data-toggle="collapse" href="#collapseAttributes" role="button" aria-expanded="false" aria-controls="collapseAttributes">
-						Informations pratiques
-					</a>
-				</p>
-				<div class="collapse" id="collapseDescription">
-					<div class="card card-body">
+				<ul class="nav nav-tabs nav-colors">
+					<li class="active p-3">
+						<a href="#tab-description" data-toggle="tab" class="text-decoration-none">Description</a>
+					</li>
+					<li class="p-3">
+						<a href="#tab-specification" data-toggle="tab" class="text-decoration-none">Informations pratiques</a>
+					</li>
+					<li class="p-3">
+						<a href="#tab-reserver" data-toggle="tab" class="text-decoration-none">Réserver</a>
+					</li>
+					<li class="p-3">
+						<a href="#tab-review" data-toggle="tab" class="text-decoration-none">Avis (0)</a>
+					</li>
+				</ul>
+				<div class="tab-content">
+					<div class="tab-pane active" id="tab-description">
 						<p>{{ ( product.description ?? '') }}</p>
 					</div>
-				</div>
-				<div class="collapse" id="collapseAttributes">
-					<div class="card card-body">
-						{{ dump( product.attribute) }}
+					<div class="tab-pane" id="tab-specification">
+						<table>
+							{% for attribute in attributes|sort((b, a) => a.attributeGroup.name <=> b.attributeGroup.name) %}
+							<tr>
+								<td>{{ attribute.attributeGroup.name }}</td>
+								<td>{{ attribute.name }}</td>
+								<td>{{ attribute.value }}</td>
+							</tr>
+							{% endfor %}
+						</table>
+					</div>
+					<div class="tab-pane" id="tab-review">
+						hello3
+					</div>
+					<div class="tab-pane" id="tab-reserver">
+						hello4
 					</div>
 				</div>
 
 
-				<p>
-					<a data-toggle="collapse" href="#multiCollapseExample1" role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Toggle first element</a>
-					<button type="button" data-toggle="collapse" data-target="#multiCollapseExample2" aria-expanded="false" aria-controls="multiCollapseExample2">Toggle second element</button>
-					<button type="button" data-toggle="collapse" data-target=".multi-collapse" aria-expanded="false" aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both elements</button>
-				</p>
-				<div class="row">
-					<div class="col">
-						<div class="collapse multi-collapse" id="multiCollapseExample1">
-							<div class="card card-body">
-								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-							</div>
-						</div>
-					</div>
-					<div class="col">
-						<div class="collapse multi-collapse" id="multiCollapseExample2">
-							<div class="card card-body">
-								Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.
-							</div>
-						</div>
-					</div>
-				</div>
 			</div>
 
 		</div>
 
 
 	</article>
+
 
 {% endblock %}
